--- a/about.html
+++ b/about.html
@@ -11,5 +11,7 @@
 		<a href="https://www.flickr.com/photos/puliarfanita/22959238329">
 			<img src="images/polar_bear.jpg" alt="Polar Bear"/>
 		</a>
+
+		<a href="https://pwilly-j.github.io/website/index.html"><em>Index Page</em></a>. 
 	</body>
 </html>
